# squirrel_prediction

./: README.md  output.csv
examples/: known.csv
prediction_communicator/: CMakeLists.txt  package.xml
prediction_communicator/common/: domain_PDDLtoCSV.pddl  problem_PDDLtoCSV.csv  problem_PDDLtoCSV.pddl
prediction_communicator/include/: CSVGenerator.h  CSVStateGenerator.h  CSVStateImporter.h  CommunicatorInterface.h
prediction_communicator/launch/: prediction_communicator.launch
prediction_communicator/src/: CSVGenerator.cpp  CSVStateGenerator.cpp  CSVStateImporter.cpp  CommunicatorInterface.cpp
prediction_communicator/srv/: CSVGeneratorService.srv  CSVService.srv
squirrel_prediction/: CMakeLists.txt  package.xml
squirrel_relations_prediction/: CMakeLists.txt  package.xml
squirrel_relations_prediction/scripts/: predict_relations_server.py
